--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webcam Face Detection, Recognition & Age/Gender</title>
+    <title>PictureMe - Face Detection & Recognition</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Webcam Face Detection, Recognition & Age/Gender</h1>
+            <h1>PictureMe</h1>
             <p>Real-time face detection, recognition, age and gender analysis using your webcam</p>
         </header>
 
